--- a/2.4/Dockerfile
+++ b/2.4/Dockerfile
@@ -24,9 +24,10 @@ RUN apk add --no-cache --quiet --virtual \
       libc-dev \
       libffi-dev \
       make \
+      openssh-client \
       openssl-dev \
       python3 \
-      python3-dev
+      python3-dev \
 
 RUN pip3 install --upgrade pip && \
     pip3 install ansible==${ANSIBLE_VERSION}
