--- a/2.5/Dockerfile
+++ b/2.5/Dockerfile
@@ -27,7 +27,8 @@ RUN apk add --no-cache --quiet --virtual \
       openssh-client \
       openssl-dev \
       python3 \
-      python3-dev
+      python3-dev \
+      curl
 
 RUN pip3 install --upgrade pip && \
     pip3 install ansible==${ANSIBLE_VERSION}
