--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@
     - docker load -i image/v2.6.tar
     - docker load -i image/v2.7.tar
     - docker load -i image/v2.8.tar
+    - docker load -i image/v2.9.tar
   only:
     - master
   services:
@@ -42,6 +43,7 @@
     - docker load -i image/v2.6.tar
     - docker load -i image/v2.7.tar
     - docker load -i image/v2.8.tar
+    - docker load -i image/v2.9.tar
   only:
     - master
   services:
@@ -98,6 +100,13 @@ v2.8:build:
     - mkdir image
     - docker save ansible:2.8 > image/v2.8.tar
 
+v2.9:build:
+  extends: .build
+  script:
+    - docker build --rm --tag ansible:2.9 2.9
+    - mkdir image
+    - docker save ansible:2.9 > image/v2.9.tar
+
 # test
 v2.4:test:
   extends: .test
@@ -124,6 +133,11 @@ v2.8:test:
   script:
     - docker run ansible:2.8 ansible --version
 
+v2.9:test:
+  extends: .test
+  script:
+    - docker run ansible:2.9 ansible --version
+
 # deploy
 # https://hub.docker.com/u/vpgrp/
 vpgrp:
@@ -134,12 +148,14 @@ vpgrp:
     - docker tag ansible:2.6 vpgrp/ansible:2.6
     - docker tag ansible:2.7 vpgrp/ansible:2.7
     - docker tag ansible:2.8 vpgrp/ansible:2.8
-    - docker tag ansible:2.8 vpgrp/ansible:latest
+    - docker tag ansible:2.9 vpgrp/ansible:2.9
+    - docker tag ansible:2.9 vpgrp/ansible:latest
     - docker push vpgrp/ansible:2.4
     - docker push vpgrp/ansible:2.5
     - docker push vpgrp/ansible:2.6
     - docker push vpgrp/ansible:2.7
     - docker push vpgrp/ansible:2.8
+    - docker push vpgrp/ansible:2.9
     - docker push vpgrp/ansible:latest
 
 # https://hub.docker.com/u/vptech/
@@ -151,11 +167,13 @@ vptech:
     - docker tag ansible:2.6 vptech/ansible:2.6
     - docker tag ansible:2.7 vptech/ansible:2.7
     - docker tag ansible:2.8 vptech/ansible:2.8
-    - docker tag ansible:2.8 vptech/ansible:latest
+    - docker tag ansible:2.9 vptech/ansible:2.9
+    - docker tag ansible:2.9 vptech/ansible:latest
     - docker push vptech/ansible:2.4
     - docker push vptech/ansible:2.5
     - docker push vptech/ansible:2.6
     - docker push vptech/ansible:2.7
     - docker push vptech/ansible:2.8
+    - docker push vptech/ansible:2.9
     - docker push vptech/ansible:latest
 # EOF
