--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ publish-feature:docker:
   parallel:
     matrix:
       - NAME: [ 'VERSION' ]
-        VERSION: [ '2.9', '2.10' ]
+        VERSION: [ '2.9', '2.10', '2.11' ]
 
 delete-feature:docker:
   variables:
@@ -50,7 +50,7 @@ publish-release:docker:
   parallel:
     matrix:
       - NAME: [ 'VERSION' ]
-        VERSION: [ '2.9', '2.10' ]
+        VERSION: [ '2.9', '2.10', '2.11' ]
 
 publish-public-release:docker:
   variables:
@@ -59,5 +59,5 @@ publish-public-release:docker:
   parallel:
     matrix:
       - NAME: [ 'VERSION' ]
-        VERSION: [ '2.9','2.10' ]
+        VERSION: [ '2.9','2.10', '2.11' ]
 ...
