fix: forget to fix renovate

--- a/renovate.json
+++ b/renovate.json
@@ -15,13 +15,7 @@
     "regexManagers": [
       {
         "fileMatch": ["^Dockerfile$"],
-        "matchStrings": ["ARG ANSIBLE_210_LATEST=(?<currentValue>.*?)\n"],
-        "depNameTemplate": "ansible",
-        "datasourceTemplate": "pypi"
-      },
-      {
-        "fileMatch": ["^Dockerfile$"],
-        "matchStrings": ["ARG ANSIBLE_29_LATEST=(?<currentValue>.*?)\n"],
+        "matchStrings": ["ARG ANSIBLE_\\d+_LATEST=(?<currentValue>.*?)\n"],
         "depNameTemplate": "ansible",
         "datasourceTemplate": "pypi"
       }
