--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,11 +37,11 @@ publish-feature:docker:
   parallel:
     matrix:
       - NAME: [ 'VERSION' ]
-        VERSION: [ '2.9', '2.10', '2.11' ]
+        VERSION: [ '2.9', '2.10', '2.11', '2.15' ]
 
 delete-feature:docker:
   variables:
-    TAG: '${CI_COMMIT_REF_SLUG}-2.9 ${CI_COMMIT_REF_SLUG}-2.10 ${CI_COMMIT_REF_SLUG}-2.11'
+    TAG: '${CI_COMMIT_REF_SLUG}-2.9 ${CI_COMMIT_REF_SLUG}-2.10 ${CI_COMMIT_REF_SLUG}-2.11 ${CI_COMMIT_REF_SLUG}-2.15'
 
 publish-release:docker:
   variables:
@@ -50,7 +50,7 @@ publish-release:docker:
   parallel:
     matrix:
       - NAME: [ 'VERSION' ]
-        VERSION: [ '2.9', '2.10', '2.11' ]
+        VERSION: [ '2.9', '2.10', '2.11', '2.15' ]
 
 publish-public-release:docker:
   variables:
@@ -59,5 +59,5 @@ publish-public-release:docker:
   parallel:
     matrix:
       - NAME: [ 'VERSION' ]
-        VERSION: [ '2.9','2.10', '2.11' ]
+        VERSION: [ '2.9','2.10', '2.11', '2.15' ]
 ...
